# gen/jet/table/table_use_schema.go
@@ -19,6 +19,10 @@ func UseSchema(schema string) {
 	GroupUsers = GroupUsers.FromSchema(schema)
 	Groups = Groups.FromSchema(schema)
 	Migrations = Migrations.FromSchema(schema)
+	NetworkGroups = NetworkGroups.FromSchema(schema)
+	NetworkPrefixes = NetworkPrefixes.FromSchema(schema)
+	NetworkRouters = NetworkRouters.FromSchema(schema)
+	Networks = Networks.FromSchema(schema)
 	NodeShares = NodeShares.FromSchema(schema)
 	Nodes = Nodes.FromSchema(schema)
 	OAuthAccessTokens = OAuthAccessTokens.FromSchema(schema)
